--- a/style.css
+++ b/style.css
@@ -1,12 +1,37 @@
-.home-page {
-	background: rgba(82, 148, 240, 1);
-	background: -moz-linear-gradient(-45deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);
-	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(82, 148, 240, 1)), color-stop(100%, rgba(12, 245, 179, 1)));
-	background: -webkit-linear-gradient(-45deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);
-	background: -o-linear-gradient(-45deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);
-	background: -ms-linear-gradient(-45deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);
-	background: linear-gradient(135deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5294f0', endColorstr='#0cf5b3', GradientType=1);
+/*.home-page {*/
+	/*background: rgba(82, 148, 240, 1);*/
+	/*background: -moz-linear-gradient(-45deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);*/
+	/*background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(82, 148, 240, 1)), color-stop(100%, rgba(12, 245, 179, 1)));*/
+	/*background: -webkit-linear-gradient(-45deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);*/
+	/*background: -o-linear-gradient(-45deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);*/
+	/*background: -ms-linear-gradient(-45deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);*/
+	/*background: linear-gradient(135deg, rgba(82, 148, 240, 1) 0%, rgba(12, 245, 179, 1) 100%);*/
+	/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5294f0', endColorstr='#0cf5b3', GradientType=1);*/
+/*}*/
+
+body {
+	background: linear-gradient(to bottom, #4c29ff, #13f4df, #6b10f8, #008f83, #FA709A );
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+
+
+body:before{
+	content:'';
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	z-index: -1;
+	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), #0e7085 40%, #20bf55 75%);
+}
+
+
+.card-background{
+	background-color: #485461;
+	background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+	background-blend-mode: multiply;
 }
 
 .title-head {
@@ -36,11 +61,11 @@
 hr {
 	width: 97%;
 	border-top: 1px solid #96E6B3;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+	border-bottom: 1px solid rgba(62, 62, 62, 0.26);
 }
 
 h1 {
-	color: #111;
+	color: #cccccc;
 	font-family: 'Oswald', sans-serif;
 	font-size: 3em;
 	font-weight: bold;
@@ -49,7 +74,7 @@ h1 {
 
 h2 {
 	margin-left: 2%;
-	color: #464E47;
+	color: #7fbcb9;
 	font-family: 'Oswald', sans-serif;
 	font-size: 30px;
 	font-weight: 300;
@@ -57,28 +82,28 @@ h2 {
 }
 
 h3 {
-	color: #568259;
+	color: #37c379;
 	font-family: 'Oswald', sans-serif;
 	font-size: 24px;
 
 }
 
 p {
-	color: #464E47;
+	color: #b0c0b5;
 	font-family: 'Inconsolata', monospace;
 	font-size: 16px;
 	text-justify: inter-word;
 }
 
 ol {
-	color: #464E47;
+	color: #B0C0B5;
 	font-family: 'Inconsolata', monospace;
 	font-size: 16px;
 	text-justify: inter-word;
 }
 
 li {
-	color: #464E47;
+	color: #B0C0B5;
 	font-family: 'Inconsolata', monospace;
 	font-size: 16px;
 	text-justify: inter-word;
